--- a/src/components/Tech.css
+++ b/src/components/Tech.css
@@ -2,67 +2,12 @@
 display: block;
 padding: 1%;
 }
-
-.Container { 
-	display: flex;
-	align-items: flex;
-    margin-top: 55px;
-	max-width: 900px;
-	min-width: 450px;
-	max-height: 600px;
-	min-height: 225px;
-    border-radius: 4%;
-	justify-content: center;
-    border: 5px solid #fff;
-	padding: 20px;
-}
-
-.Username {
-	font-size: 12px;
-	font-weight: bold;
-	border: 2px solid #fff;
-	border-radius: 15px;
-	text-transform: uppercase;
-    padding-left: 190px;
-    padding-top: 2%;
-    padding-right: 190px;
-    height: 50px;
-}
-
-.Containertabs {
-	display: row;
-	flex: 1;
-	gap: 15px;
-
-}
-
-.Usertabs {
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	font-size: 16px;
-	text-transform: uppercase;
-	border: 2px solid #fff;
-	border-radius: 15px;
-	inset: 50px;
-    margin-top: 10px;
-}
-
-.Userimage {
-	width: 150px;
-	height: 300px;
-	border-radius: 40px;
-	border: 2px solid #fff;
-	background-color: #000;
-}
-
-@media(max-width:768px){
-    
 .Container { 
 	display: flex;
 	align-items: flex;
 	min-width: 300px;
-    height: 300px;
+  max-height: 500px;
+  min-height: auto;
     border-radius: 4%;
 	justify-content: center;
     border: 5px solid #fff;
@@ -73,6 +18,112 @@ padding: 1%;
 
 .Username {
     border-radius: 10px;
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: 2% 115px; /* Ajustando o preenchimento para cima e para os lados */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid #fff;
+    text-align: center;
+    box-sizing: border-box; /* Inclui a espessura da borda no cálculo do tamanho total */
+    
+}
+
+.Username:hover {
+    background: #d207e0b1;
+    box-shadow: 0 0 5px #000, 0 0 25px #d207e0b1, 0 0 200px #d207e0b1;
+    border: transparent;
+}
+
+.Username text {
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+   
+}
+
+.Containertabs {
+    display:contents;
+    justify-content: flex-start;
+    gap: 15px;
+    grid-template-columns: 1fr;
+  }
+  
+  .Usertabs {
+    font-size: 10px;
+    text-transform: uppercase;
+    border: none;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 25px;
+  }
+  
+  .button-wrapper {
+    text-align: center; /* Centralizar o botão horizontalmente */
+  }
+
+  .btn:hover {
+    box-shadow: 7px 7px 0px #d207e0b1;
+    top: -5px;
+    left: -5px;
+  } 
+  
+  /* Estilo do botão dentro de .Usertabs */
+  .Usertabs button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #fdf6f6;
+    border: 3px solid #fff;
+    width: 115px;
+    height: 25px;
+    border-radius: 5px;
+    margin-top: 7px;
+    margin-right: 19px;
+  }
+  
+
+.Userimage {
+	width: 140px;
+	height: 180px;
+    padding: 2%;
+    margin-left: 1%;
+    margin-top: 4%;
+	border-radius: 20px;
+	border: 3px solid #fff;
+	background-color: #000;
+}
+
+
+.img {
+    max-width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    
+}
+
+@media(max-width:768px){
+    
+.Container { 
+	display: flex;
+	align-items: flex;
+	min-width: 300px;
+  max-height: 500px;
+  min-height: auto;
+    border-radius: 4%;
+	justify-content: center;
+    border: 5px solid #fff;
+	padding: 20px;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+.Username {
+    border-radius: 10px;
+    font-size: 12px;
     text-transform: uppercase;
     padding: 2% 115px; /* Ajustando o preenchimento para cima e para os lados */
     display: flex;
