--- a/src/components/Tech.css
+++ b/src/components/Tech.css
@@ -1,13 +1,13 @@
 .door {
-display: block;
+display: contents;
 padding: 1%;
 }
 .Container { 
 	display: flex;
 	align-items: flex;
 	min-width: 300px;
-  max-height: 500px;
-  min-height: auto;
+  max-height: 800px;
+  min-height: 500px;
     border-radius: 4%;
 	justify-content: center;
     border: 5px solid #fff;
@@ -46,6 +46,7 @@ padding: 1%;
 
 .Containertabs {
     display:contents;
+    flex-direction: column;
     justify-content: flex-start;
     gap: 15px;
     grid-template-columns: 1fr;
@@ -81,7 +82,7 @@ padding: 1%;
     width: 115px;
     height: 25px;
     border-radius: 5px;
-    margin-top: 7px;
+    margin-top: 10px;
     margin-right: 19px;
   }
   
@@ -152,7 +153,6 @@ padding: 1%;
 .Containertabs {
     display:contents;
     justify-content: flex-start;
-    gap: 15px;
     grid-template-columns: 1fr;
   }
   
@@ -162,8 +162,6 @@ padding: 1%;
     border: none;
     justify-content: flex-start;
     flex-direction: column;
-    gap: 20px;
-    margin-top: 25px;
   }
   
   .button-wrapper {
