--- a/src/components/Tech.css
+++ b/src/components/Tech.css
@@ -112,7 +112,7 @@ padding: 1%;
 	display: flex;
 	align-items: flex;
 	min-width: 300px;
-  max-height: 500px;
+  max-height: auto;
   min-height: auto;
     border-radius: 4%;
 	justify-content: center;
@@ -120,6 +120,7 @@ padding: 1%;
 	padding: 20px;
     flex-wrap: wrap;
     align-content: flex-start;
+    margin-top: 50px;
 }
 
 .Username {
@@ -182,7 +183,7 @@ padding: 1%;
     color: #fdf6f6;
     border: 3px solid #fff;
     width: 115px;
-    height: 25px;
+    height: 30px;
     border-radius: 5px;
     margin-right: 19px;
   }
