--- a/src/components/Tech.css
+++ b/src/components/Tech.css
@@ -5,9 +5,9 @@ padding: 1%;
 .Container { 
 	display: flex;
 	align-items: flex;
-	min-width: 300px;
-  max-height: 800px;
-  min-height: 500px;
+	max-width: 500px;
+  max-height: 600px;
+  min-height: 400px;
     border-radius: 4%;
 	justify-content: center;
     border: 5px solid #fff;
@@ -24,6 +24,7 @@ padding: 1%;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 25px;
     border: 4px solid #fff;
     text-align: center;
     box-sizing: border-box; /* Inclui a espessura da borda no cálculo do tamanho total */
@@ -57,7 +58,6 @@ padding: 1%;
     text-transform: uppercase;
     border: none;
     justify-content: flex-start;
-    flex-direction: column;
     gap: 20px;
     margin-top: 25px;
   }
@@ -194,7 +194,6 @@ padding: 1%;
 	height: 180px;
     padding: 2%;
     margin-left: 1%;
-    margin-top: 4%;
 	border-radius: 20px;
 	border: 3px solid #fff;
 	background-color: #000;
