--- a/src/components/Tech.css
+++ b/src/components/Tech.css
@@ -2,29 +2,32 @@
 display: contents;
 padding: 1%;
 }
-.Container { 
-	display: flex;
-	align-items: flex;
-	max-width: 500px;
-  max-height: 600px;
-  min-height: 400px;
-    border-radius: 4%;
-	justify-content: center;
-    border: 5px solid #fff;
-	padding: 20px;
-    flex-wrap: wrap;
-    align-content: flex-start;
+.Container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+  max-height: auto;
+  min-height: auto;
+  border-radius: 4%;
+  border: 5px solid #fff;
+  padding: 20px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  margin: 0 auto; /* Centraliza horizontalmente */
 }
+
 
 .Username {
     border-radius: 10px;
     font-size: 12px;
     text-transform: uppercase;
-    padding: 2% 115px; /* Ajustando o preenchimento para cima e para os lados */
+    padding: 2% 10px; /* Ajustando o preenchimento para cima e para os lados */
     display: flex;
+    width: 500px;
     justify-content: center;
     align-items: center;
-    height: 25px;
+    height: 40px;
     border: 4px solid #fff;
     text-align: center;
     box-sizing: border-box; /* Inclui a espessura da borda no cálculo do tamanho total */
@@ -54,7 +57,7 @@ padding: 1%;
   }
   
   .Usertabs {
-    font-size: 10px;
+    font-size: 14px;
     text-transform: uppercase;
     border: none;
     justify-content: flex-start;
@@ -79,11 +82,12 @@ padding: 1%;
     cursor: pointer;
     color: #fdf6f6;
     border: 3px solid #fff;
-    width: 115px;
-    height: 25px;
+    width: 160px;
+    height: 35px;
     border-radius: 5px;
     margin-top: 10px;
-    margin-right: 19px;
+    margin-right: 50px;
+    ;
   }
   
 
@@ -107,6 +111,11 @@ padding: 1%;
 }
 
 @media(max-width:768px){
+
+  .door {
+    display: contents;
+    padding: 1%;
+    }
     
 .Container { 
 	display: flex;
