--- a/src/components/Sliding.css
+++ b/src/components/Sliding.css
@@ -19,7 +19,9 @@ height: 200px;
 padding: 10 10px;
 border-radius: 50%;
 border: solid 8px rgba(20, 19, 20, 0.881);
-padding: 6px;
+padding: 6
+
+px;
 background-color: rgba(137, 43, 226, 0.79);
 box-shadow: 0px 0px 180px rgba(174, 11, 215, 0.926); 
 }
