--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -118,3 +118,9 @@ img.rcw-close-launcher {
         margin: 10px;
         fill: blue !important;
     }
+
+   .rcw-snippet-details {
+    border: solid 1px #5407b2;
+    border-radius: 5px;
+    background-color: #11ef2bd2;
+   } 
