--- a/src/components/main.css
+++ b/src/components/main.css
@@ -29,8 +29,16 @@ code::before {
     align-items: center;
     display: block;
     margin-left: 250px;
+    animation: animate 3s infinite ease alternate;
 }
-}
+@keyframes animate {
+  to {
+    transform: translateY(90px);
+    
+  }
+  }
+  }
+
 @keyframes typing {
   from {
     width: 0;
@@ -41,7 +49,19 @@ code::before {
 }
 
 /* Mídia consulta para dispositivos móveis */
-@media (max-width: 768px) {
+.banner-hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0px;
+  left: 0px;
+
+animation: animate 3s infinite ease alternate;
+}
+
+@media only screen and (max-width: 768px) {
+
   .console {
     font-size: 10px;
     width: 300px;
@@ -53,36 +73,11 @@ img.banner-hero {
   display: block;
 
 }
-}
-.banner-hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 400px;
-  width: 400px;
-  position: relative;
-  top: 0px;
-  left: 0px;
-
-
-animation: animate 3s infinite ease alternate;
-}
-
-@media only screen and (max-width: 768px) {
-.banner-hero {
-  width: auto;
-  height: 300px;
-  align-items: center;
-  margin-left: 50px;
-  top: 10px;
-  left: -60px;
-}
-}
-
 /* Definir a keyframes da animação */
 @keyframes animate {
 to {
-  transform: translateY(80px);
+  transform: translateY(90px);
   
+}
 }
 }
