--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,20 +1,29 @@
 .console {
-  background-color: #000;
-  color: #00ff00;
-  font-family: monospace;
-  padding: 10px;
-  margin-top: 15px;
-  border: 2px solid #fff;
-  border-radius: 5px;
+  background-color: #1e1e1e; /* Fundo escuro */
+  padding: 16px;
+  font-family: "Courier New", Courier, monospace;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+  color: #f3f3f3;
   overflow: hidden;
-  max-height: 300px;
-  font-size: 16px; /* Tamanho de fonte para desktop */
 }
 
-code {
-  animation: typing 2s steps(40, end) 1s; 
-  color: #fff;
+.console::after {
+  content: "|";
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  animation: blink 0.7s steps(2, start) infinite;
+  color: #27BA7D;
 }
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+
 
 code::before {
   content: "> ";
@@ -63,8 +72,8 @@ animation: animate 3s infinite ease alternate;
 @media only screen and (max-width: 768px) {
 
   .console {
-    font-size: 10px;
-    width: 300px;
+    font-size: 15px;
+    width: 330px;
 }
 img.banner-hero {
   max-width: 100%;
