--- a/src/components/main.css
+++ b/src/components/main.css
@@ -58,3 +58,117 @@ code::before {
 }
 
 
+/* Portfolio Cards Custom Styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+.spacer {
+  width: 100%;
+}
+
+.wrapper {
+  width: 100%;
+}
+
+.wrapper {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-top: dashed 2px var(--color-surface50, #e0e0e0);
+  border-bottom: dashed 2px var(--color-surface50, #e0e0e0);
+}
+
+.card-wrapper {
+  width: 100%;
+  perspective: 500px;
+  margin-bottom: 24px;
+}
+.card-wrapper:last-child {
+  margin-bottom: 0;
+}
+
+.cards {
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.card {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  border-radius: 10px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.card {
+  border-radius: 10px;
+  background-image: url("https://assets.codepen.io/16327/portrait-pattern-1.jpg");
+}
+
+.card.two {
+  background-image: url("https://assets.codepen.io/16327/portrait-pattern-2.jpg");
+}
+
+.card.three {
+  background-image: url("https://assets.codepen.io/16327/portrait-pattern-3.jpg");
+}
+
+.card.four {
+  background-image: url("https://assets.codepen.io/16327/portrait-pattern-4.jpg");
+}
+
+@media (min-width: 768px) {
+  .cards {
+    width: 80%;
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .cards {
+    width: 70%;
+    padding: 0 50px;
+  }
+}
+.banner-hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0px;
+  left: 0px;
+
+animation: animate 3s infinite ease alternate;
+}
+
+@media only screen and (max-width: 768px) {
+
+  .console {
+    font-size: 11px;
+    width: 300px;
+}
+img.banner-hero {
+  max-width: 90%;
+  justify-content: center;
+  align-items: center;
+  display: block;
+
+}
+/* Definir a keyframes da animação */
+@keyframes animate {
+to {
+  transform: translateY(90px);
+  
+}
+}
+}
